<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="30dp"


    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pm_cares"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_c_name_pmcares"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:longClickable="true"
        android:enabled="true"
        android:textIsSelectable="true"
        android:focusable="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_c_no_2121pm20202"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:longClickable="true"
        android:enabled="true"
        android:textIsSelectable="true"
        android:focusable="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ifsc_code_sbin0000691"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:longClickable="true"
        android:enabled="true"
        android:textIsSelectable="true"
        android:focusable="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upi_id_pmcares_sbi"
        android:id="@+id/pmcare"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColor="@color/color1"
        android:longClickable="true"
        android:enabled="true"
        android:textIsSelectable="true"
        android:focusable="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_other_details_go_through_the"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="15dp"
        />
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColor="#2d2dd2"

        />
</LinearLayout>
