<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cm_relief_fund"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_c_no_39234755902"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColor="#000"
        android:longClickable="true"
        android:enabled="true"
        android:textIsSelectable="true"
        android:focusable="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ifsc_sbin0001509"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColor="#000"
        android:longClickable="true"
        android:enabled="true"
        android:textIsSelectable="true"
        android:focusable="true"
        />

    <TextView
        android:id="@+id/upi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:enabled="true"
        android:focusable="true"
        android:longClickable="true"
        android:text="@string/upi_hrycoronarelieffund_sbi"
        android:textColor="@color/color1"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textIsSelectable="true"
        android:textSize="20sp"
        android:textStyle="bold" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_direct_a_c_donation"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColor="#000"
        />
    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here4"
        android:textStyle="bold"
        android:textColor="#2d2dd2"
        android:layout_margin="10dp"
        android:textSize="20sp"
        />

</LinearLayout>
