<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PMNRF"
    android:orientation="vertical"
    android:padding="30dp"


    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pm_national_relief_fund"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/pmcare1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upi_pmnrf_centralbank"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColor="@color/color1"
        android:longClickable="true"
        android:enabled="true"
        android:textIsSelectable="true"
        android:focusable="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_all_details_and_bank_payments2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColor="#000"
        />
    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here2"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColor="#2d2dd2"
        android:textSize="20sp"

        />



</LinearLayout>