<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificationActivity_1"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/clr_otp_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn"
            android:layout_width="112dp"
            android:layout_height="62dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="149dp"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="302dp"
            android:background="@drawable/button_background"
            android:text="@string/action_sign_in" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/frst_ll"
            android:layout_centerInParent="true"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/name"
                android:layout_width="234dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:background="@color/clr_grey_text_transparent"
                android:gravity="center"
                android:hint="@string/otp"
                android:inputType="numberPassword"
                android:textColor="@color/clr_white_text"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/frst_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressbar"
                style="?android:attr/progressBarStyle"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginTop="-214dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/please_type_the_verification_code"
                android:textColor="@color/clr_grey_text"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/verification_code"
                android:textColor="@color/clr_white_text"
                android:textSize="25sp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>