<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Renamepassword"
            android:textColor="@color/buttonColor"
            android:layout_marginBottom="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAllCaps="true"
            android:layout_gravity="center"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="oldpassword"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:inputType="textPassword"
                android:id="@+id/changeoldpassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NewPassword"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:inputType="textPassword"
                android:id="@+id/changenewpassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ConfirmNewPassword"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:inputType="textPassword"
                android:id="@+id/changeconfirmpassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reportsubmit"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_button"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:id="@+id/changesubmit"/>

    </LinearLayout>
</ScrollView>